--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "wave",
   "version": "0.1.0",
-  "homepage": "https://fraserivison.github.io/wave-app/",
   "private": true,
   "dependencies": {
     "16": "^0.0.2",
@@ -10,15 +9,17 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "bootstrap": "^4.6.2",
+    "coa": "^2.0.2",
     "date-fns": "^4.1.0",
     "gh-pages": "^6.3.0",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.6.8",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^17.0.2",
     "react-infinite-scroll-component": "^6.1.0",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3",
+    "react-scripts": "^5.0.1",
+    "svgo": "^3.3.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -34,7 +35,8 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "parser": "@babel/eslint-parser"
   },
   "browserslist": {
     "production": [
@@ -49,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.18.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@rollup/plugin-babel": "^6.0.4",
     "eslint": "^7.32.0",
