--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "16": "^0.0.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -54,7 +53,8 @@
     "@babel/eslint-parser": "^7.18.0",
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@rollup/plugin-babel": "^6.0.4",
-    "eslint": "^7.32.0",
+    "eslint": "^8.57.1",
+    "eslint-config-react-app": "^7.0.1",
     "msw": "^0.35.0",
     "rollup": "^4.36.0",
     "semver": "^7.7.1"
